--- a/GradesManagement/GradesManagement.csproj
+++ b/GradesManagement/GradesManagement.csproj
@@ -98,6 +98,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="scripts\jquery-1.12.0.intellisense.js" />
+    <Content Include="scripts\jquery-1.12.0.js" />
+    <Content Include="scripts\jquery-1.12.0.min.js" />
+    <Content Include="scripts\jquery-1.12.0.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
