--- a/GradesManagement/packages.config
+++ b/GradesManagement/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="jQuery" version="1.12.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="1.2.3" targetFramework="net45" />
